--- a/todo
+++ b/todo
@@ -13,3 +13,14 @@ Version 1
 (ok). Rajouter une colonne qui affiche le nom du manager en cours
 (ok). Mettre un lien sur chaque ligne de département pour afficher dans une autre page la liste des
 employés de ce département
+
+
+Version 2
+(maneva)
+--(ok)on clique sur un employé, on doit affiché le fiche de l 'employé
+--(ok)rajouter l'historique du salaire et de l'emploi occupe dans le fichier
+(mariah)
+--formulaire de recherche
+--seulement 20,10
+--créer un lien suivant pour afficher les 20 prochaine lignes
+-- créer un lien pour afficher les 20 lignes précédentes
