--- a/todo
+++ b/todo
@@ -26,7 +26,7 @@ Version 2
 --(ok)créer un lien suivant pour afficher les 20 prochaine lignes
 --(ok)créer un lien pour afficher les 20 lignes précédentes
 
---(maneva)Ajouter une colonne nombre employé sur la liste des départements
---(mariah)Créer une page pour afficher un tableau contenant le nombre d'employé (homme et femme ), et le salaire moyen pour chaque emploi
+--(ok)(maneva)Ajouter une colonne nombre employé sur la liste des départements
+--(ok)(mariah)Créer une page pour afficher un tableau contenant le nombre d'employé (homme et femme ), et le salaire moyen pour chaque emploi
 --(maneva)Dans la fiche employé, mettre l'emploi le plus long (en terme de date)
 
